Add comment. Remove golang build block

--- a/.github/workflows/mydocker.yml
+++ b/.github/workflows/mydocker.yml
@@ -5,7 +5,7 @@
 
 name: Docker Series Builds
 
-on: [push]
+on: [push]  # Set for CI. Builds on source code updates
 
 jobs:
   build:
@@ -21,7 +21,5 @@ jobs:
     - name: docker build python
       run: |
         docker build ./python -t aimvector/python:1.0.0
-#    - name: docker build golang   # Removed due to build errors.
-#      run: |
-#        docker build ./golang -t aimvector/golang:1.0.0
+
         
