--- a/.github/workflows/mydocker.yml
+++ b/.github/workflows/mydocker.yml
@@ -12,6 +12,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2  # Use existing Action to get source code.
+    - name: docker login
+      env:
+        DOCKER_USER: ${{ secrets.DOCKER_USER }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD}}
+      run:  |
+        docker login -u $DOCKER_USER -P $DOCKER_PASSWORD
     - name: docker build csharp
       run: |  # Use the pipe for multiline string to run multiple builds 
         docker build ./c# -t aimvector/csharp:1.0.0
