--- a/.github/workflows/mydocker.yml
+++ b/.github/workflows/mydocker.yml
@@ -11,12 +11,12 @@ jobs:
   build:
     runs-on: ubuntu-latest  # Runs the build on Github Actions Ubuntu worker node in cloud.
     steps:
-    - uses: actions/checkout@v2  # Use existing Action to get source code.
+    - uses: actions/checkout@v2  # Use existing Action to get source code  (instead of run:)
     - name: docker login
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      run:  |
+      run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - name: docker build csharp
       run: |  # Use the pipe for multiline string to run multiple builds 
