Add to gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ messaging/kafka/data/*
 kubernetes/portainer/volume*
 kubernetes/rancher/volume/*
 kubernetes/portainer/business/volume*
+
+# yml
+scratch.yml
