--- a/.github/workflows/mydocker2.yml
+++ b/.github/workflows/mydocker2.yml
@@ -21,13 +21,13 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: docker build csharp
       run: |  # Use the pipe for multiline string to run multiple commands 
-        docker build ./c# -t djlowrance2/csharp:1.0.0
+        docker build ./c# -t ghcr.io/djl2/csharp:1.0.0
     - name: docker build nodejs
       run: |
-        docker build ./nodejs -t djlowrance2/nodejs:1.0.0
+        docker build ./nodejs -t ghcr.io/djl2/nodejs:1.0.0
     - name: docker build python
       run: |
-        docker build ./python -t djlowrance2/python:1.0.0
+        docker build ./python -t ghcr.io/djl2/python:1.0.0
     - name: docker push
       run: |
         docker push ghcr.io/djl2/csharp:1.0.0
