--- a/.github/workflows/mydocker2.yml
+++ b/.github/workflows/mydocker2.yml
@@ -13,15 +13,17 @@ jobs:
     steps:
     - uses: actions/checkout@v2  # Use existing Action to get source code.
 
-    - name: Log in to the Github Container registry
-      uses: docker/login-action@v2
+    - name: Log in to the Github Container registry # Uses the GH Action written by the Docker team (a bit strange IMO)
+      uses: docker/login-action@v2  # See https://github.com/docker/login-action
       with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
+        registry: ghcr.io   # The default github Container Registry url
+        username: ${{ github.actor }}  # See https://github.com/docker/login-action#github-container-registry
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: docker build nodejs
       run: |
-        docker build ./nodejs -t ghcr.io/djl2/nodejs:1.0.0
+        docker build ./nodejs -t ghcr.io/djl2/nodejs
     - name: docker push
       run: |
-        docker push ghcr.io/djl2/nodejs:1.0.0
+        docker push ghcr.io/djl2/nodejs
+      # To see published Docker images, go to your Github account>packages
+
