--- a/kubernetes/deployments/deployment.yaml
+++ b/kubernetes/deployments/deployment.yaml
@@ -13,7 +13,7 @@ spec:
   selector:
     matchLabels:
       app: example-app
-  replicas: 2
+  replicas: 2 # Set the number of Pods desired here
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -43,21 +43,21 @@ spec:
           limits:
             memory: "256Mi"
             cpu: "500m"
-      tolerations:
-      - key: "cattle.io/os"
-        value: "linux"
-        effect: "NoSchedule"      
+        # tolerations:   # Commenting out due to errors -djl
+        # - key: "cattle.io/os"
+        #   value: "linux"
+        #   effect: "NoSchedule"      
 #NOTE: comment out `volumeMounts` section for configmap and\or secret guide
-        # volumeMounts:
-        # - name: secret-volume
-        #   mountPath: /secrets/
-        # - name: config-volume
-        #   mountPath: /configs/
+        volumeMounts:
+        - name: secret-volume
+          mountPath: /secrets/
+        - name: config-volume
+          mountPath: /configs/
 #NOTE: comment out `volumes` section for configmap and\or secret guide
-      # volumes:
-      # - name: secret-volume
-      #   secret:
-      #     secretName: mysecret
-      # - name: config-volume
-      #   configMap:
-      #     name: example-config #name of our configmap object
+      volumes:
+      - name: secret-volume
+        secret:
+          secretName: mysecret
+      - name: config-volume
+        configMap:
+          name: example-config #name of our configmap object
