--- a/kubernetes/deployments/deployment.yaml
+++ b/kubernetes/deployments/deployment.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
       - name: example-app
-        image: aimvector/python:1.0.4
+        image: aimvector/golang:1.0.0 # Changed to golang image so the logs output would match the video
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
@@ -43,10 +43,6 @@ spec:
           limits:
             memory: "256Mi"
             cpu: "500m"
-        # tolerations:   # Commenting out due to errors -djl
-        # - key: "cattle.io/os"
-        #   value: "linux"
-        #   effect: "NoSchedule"      
 #NOTE: comment out `volumeMounts` section for configmap and\or secret guide
         volumeMounts:
         - name: secret-volume
