--- a/kubernetes/ingress/controller/nginx/cluster-role-binding.yaml
+++ b/kubernetes/ingress/controller/nginx/cluster-role-binding.yaml
@@ -1,4 +1,4 @@
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1  # 11.25.22 Updated to newest version
 kind: ClusterRoleBinding
 metadata:
   name: nginx-ingress-clusterrole-nisa-binding
